; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_read_byte.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson_reader = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.bson_reader*)* @read_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_byte(i32* %0, %struct.bson_reader* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.bson_reader*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.bson_reader* %1, %struct.bson_reader** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %9 = call i32 @check_reader(i32* %7, %struct.bson_reader* %8, i32 1)
  %10 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %11 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %6, align 4
  %16 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %17 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** %17, align 8
  %20 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %21 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* %21, align 8
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local i32 @check_reader(i32*, %struct.bson_reader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
